# micmap

./: .gitignore  .gitmodules  CMakeLists.txt  Example.md  README.md
cmake/: Packaging.cmake  build_internal_htslib.cmake  summary.cmake  tests.cmake
data/: al_sch_1.fq  al_sch_2.fq  b37_al_sch_raw.txt  b37_badCode_raw.txt  b37_badPos_raw.txt  b37_bad_S_raw.txt  b37_bug_I_D_raw.txt  b37_bug_sa1_raw.txt  b37_bug_sa3_raw.txt  b37_chim_raw.txt  b37_cigarbug_raw.txt  b37_mis_a2_raw.txt  b37_mis_a_raw.txt  b37_mis_m_raw.txt  b37_mis_p2_raw.txt  b37_mis_p_raw.txt  b37_mis_rev_gap_raw.txt  b37_miss_a_raw.txt  b37_miss_b_raw.txt  b37_refIsN_raw.txt  b37_strange_raw.txt  b37_test_raw.txt  b37_trim_err_raw.txt  b37_wrong_raw.txt  b38_al_sch_raw.txt  b38_badCode_raw.txt  b38_badPos_raw.txt  b38_bad_S_raw.txt  b38_bug_I_D_raw.txt  b38_bug_sa1_raw.txt  b38_bug_sa2_raw.txt  b38_bug_sa3_raw.txt  b38_chim_raw.txt  b38_cigarbug_raw.txt  b38_lowq_raw.txt  b38_mis_a2_raw.txt  b38_mis_m_raw.txt  b38_mis_n_raw.txt  b38_mis_p2_raw.txt  b38_mis_rev_gap_raw.txt  (+57 more)
doc/: cmd  transportLayer.txt
include/: ALIGNkonst.h  GTL.h  GTLdispatch.h  GTLkonst.h  Genome.h  MATCHkonst.h  config.h.cmake  constants.h  jobqueue.h  threadpool.h  virt_chr.h
scripts/: CMakeLists.txt  ExomeDiffCall  MicMapBcHiC2table  MicMapChIP2bam  MicMapChIPse2bam  MicMapExome2bam  MicMapExomeUMI2bam  MicMapHiC2table  MicMapRNA2bam  MicMapRNAse2bam  analyzeVarRegions  annotateVCF  fq2fa  genRGBsnp  grabAllContacts  grabAllNonContacts  mergeVCFandSelect  mergeVCFdetails  sortCompressCall  sortFq  sortVCF.sh  toBam  trimAndSplit  tromer2sam
scripts/genome_table/: count_mappable  filterMulti  genCfg  genCfg_b37  genCfg_b38  genCfg_cho  genTable  genTable_b37  getUniques  globalOrder  glueContigs  glueJunk  glueJunk_b38  mergeAdd  runFilterLocal  splitFwdRev
src/: CMakeLists.txt
src/Callers/: AnalyzeTags.h  AnalyzeTags2.c  AnalyzeTags3.c  AnalyzeTags3.inc  CMakeLists.txt  DiffAnalyzeTags.c  GTLcaller.c  GTLcaller3.c  GTLcaller_common.c  GTLcaller_common.h  GTLdiffCaller.c  GTLdiffCaller3.c  Nirvana.c
src/Callers/prf/: extprf_horizontal_sse41.c  horizontal_sse41.c  io.c  pfCompute.h  pfIOInline.h  pfProfile.h  pfProfileInline.h  sse41_inline_fcts.h
src/FastAlignLib/: CMakeLists.txt  FastAlignTest.c  fastalign.h  fastalign_common.c  fastalign_cpu.c
src/GTL/: CMakeLists.txt  GTL.c  GTLdispatch.c  gtl.hdf  threadpool.c
src/GTL/Compresser/: lz4.c  port.h  rangecod.c  rangecod.h
src/GTL/Genome/: genome.c  virt_chr.c
src/GTL/tools/: CMakeLists.txt  GTLamplicon.c  GTLcnt.c  GTLcoverage.c  GTLdecompress.c  GTLfetch.c  GTLindex.c  GTLinfo.c  GTLlist.c  GTLmerge.c  GTLrecompress.c  GTLregionAnalysis.c  GTLsimpleSort.c  GTLsubCoverage.c  encode_UEM.c  encode_genome.c
src/MICMAP/: Aligner.h  CMakeLists.txt  Decoder.h  LoadDecodingTable.c  ReadDecode.c  Reader.h  Writer.h  alignThread_common.h  align_common.c  align_cpu.c  cpuThreadAlignPool.h  decode.c  decode_avx2.c  decode_common.c  global_var.h  main.c  readFASTQ.c  statistics.c  statistics.h  stream.c  stream.h  system.c  system.h  topology.c  topology.h  write.c
src/MICMAP/AVX2/: CMakeLists.txt  fastalign.c  pftools_systolic.h
src/MICMAP/AVX512F/: CMakeLists.txt  alignThread_paired.c  fastalign_systolic.c  pftools_systolic.h  pftools_systolic_simplified.h
src/MICMAP/FastAlign/: fastalign.h
src/MICMAP/MPI/: CMakeLists.txt  mpi_transfer.c  mpi_transfer.h
src/MICMAP/SSE4.1/: CMakeLists.txt  alignThread_common.c  alignThread_paired.c  fastalign.c  pftools_std.h
utils/: CMakeLists.txt  VCFCorrector.c  bedSplitter.c  htsExample.c  lzBlob.c  testAlignerQueue.c
