ADD_LIBRARY(sse41align OBJECT fastalign.c)
INCLUDE_DIRECTORIES(../)
ADD_LIBRARY(sse41_Aligner OBJECT alignThread_paired.c)
ADD_DEPENDENCIES(sse41_Aligner gtl_shared)
SET_PROPERTY(SOURCE alignThread_paired.c PROPERTY COMPILE_FLAGS "-std=c11 ${CMAKE_C_SSE41_FLAGS}")
SET_PROPERTY(SOURCE fastalign.c PROPERTY COMPILE_FLAGS "${CMAKE_C_SSE41_FLAGS}")
